app/static/ministries.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: url('images/cross.jpg') no-repeat center center;
  background-size: cover;
  background-attachment: fixed;
  text-align: center;
}

.bottom-padding {
  padding-bottom: 100px;
}

.ministries-title {
  font-family: 'Times New Roman', Times, serif;
  font-size: 60pt;
  padding-top: 245px;
  font-weight: 500;
  color: #fff;
}

/* Section Container */
.section {
  position: relative;
  width: 95%;
  max-width: 1200px;
  height: 350px;
  /* Increased height for a taller rectangle */
  margin: 30px auto;
  overflow: hidden;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  opacity: 0;
  /* Initially hidden for animation */
  transform: translateX(0);
  /* Reset any transformations */
}

/* Section Image */
.section-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* Overlay Text */
.overlay {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 36px;
  /* Increased font size for larger titles */
  font-weight: bold;
  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
}

/* Description Text */
.description {
  font-size: 24px;
  color: #ffffff;
  margin: 15px 0;
  line-height: 1.4;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6); /* Added black shadow */
}

/* Adding classes to trigger animation */
.section-left {
  opacity: 0;
  transform: translateX(-100%);
  transition: opacity 1s ease, transform 1s ease;
}

.section-right {
  opacity: 0;
  transform: translateX(100%);
  transition: opacity 1s ease, transform 1s ease;
}

.animate-left {
  opacity: 1;
  transform: translateX(0);
}

.animate-right {
  opacity: 1;
  transform: translateX(0);
}

/* Animation Keyframes */
@keyframes slideInLeft {
  0% {
    transform: translateX(-100%);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideInRight {
  0% {
    transform: translateX(100%);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

/* Media Queries for Mobile Responsiveness */
@media (max-width: 768px) {
  .ministries-title {
    font-size: 40pt;
    padding-top: 150px;
  }

  .section {
    height: 250px;
    margin: 20px auto;
  }

  .overlay {
    font-size: 24px;
  }

  .description {
    font-size: 18px;
    padding: 0 10px;
  }
}

@media (max-width: 480px) {
  .ministries-title {
    font-size: 30pt;
    padding-top: 100px;
  }

  .section {
    height: 200px;
    margin: 15px auto;
  }

  .overlay {
    font-size: 20px;
  }

  .description {
    font-size: 16px;
    padding: 0 5px;
  }
}

